Accessibility improvement - provide link visible to screenreaders that allows you to skip over a preformated section. Fixes #22

--- a/GemiNaut/GmiConverters/Themes/Fabric (classic).css
+++ b/GemiNaut/GmiConverters/Themes/Fabric (classic).css
@@ -281,4 +281,9 @@ div.placeholder-mask-container {
 	
 }
 
+.screenreader {
+	position: absolute;
+    left:-9999px;
+}
+
 		
